<resources>
    <string name="app_name">FilmCatalog</string>
    <string name="hello_msg">Добро пожаловать!</string>
    <string name="register_message">У меня нет аккаунта</string>
    <string name="login_string">Логин</string>
    <string name="password_string">Пароль</string>
    <string name="navigation_header">Navigation header</string>
    <string name="home">Home</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="email">Почта</string>
    <string name="password_repeat">Повторите пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="review_btn">Reviews</string>
    <string name="view_all_btn">view all</string>
    <string name="review">Написать ревью</string>
    <string name="your_impressions">Ваши впечатления:</string>
    <string name="rate">Оценить</string>
    <string name="cancel">Отмена</string>
</resources>