<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/login_fragment_hello_msg"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:text="@string/hello_msg"
        android:textSize="25sp"
        android:fontFamily="@font/lato_light"/>

    <LinearLayout
        android:id="@+id/login_fragment_content_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_fragment_login_edit_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="300dp"
            android:hint="@string/login_string"
            android:background="@drawable/edit_text_selector"/>

        <EditText
            android:id="@+id/login_fragment_password_edit_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="300dp"
            android:layout_marginTop="20dp"
            android:hint="@string/password_string"
            android:background="@drawable/edit_text_selector"/>

        <Button
            android:id="@+id/login_fragment_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Войти"
            android:layout_gravity="center"
            android:backgroundTint="@color/light_gray" />

        <TextView
            android:id="@+id/login_fragment_register_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_gravity="center"
            android:textColor="@color/light_gray"
            android:text="@string/register_message"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>